--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -3066,6 +3066,7 @@ chapters=Chapters
 character-options=Character Options
 character-threshold=Character Threshold
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions.
 characters=Characters
 characters-blacklist=Characters Blacklist
 characters-maximum=Characters Maximum
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Display Folder Facet
 display-frequencies=Display Frequencies
 display-group-name=Display Group Name
+display-group-name-help=Enter the heading label for the suggestions from each contributor.
 display-horizontally=Display Horizontally
 display-immediately=Display Immediately
 display-label=Display Label
@@ -6739,6 +6741,7 @@ field.user-name=User Name
 fields=Fields
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Fields are added if you need to distinguish items based on criteria chosen by the user. For example, if you are selling t-shirts, you may want to add a field with the name <em>Size</em> and the values <em>S, M, L, XL</em>. Enter the values as a list of comma delimited options.
 fields-help=Enter a list of fields to fetch and analyze from the input document.
+fields-suggestion-help=Specify additional fields to return with the response.
 fields-to-display=Fields to Display
 fields-to-display-help=Enter the names of the fields to display in the summary, in a comma separated list. If not set, all fields are displayed. The first field is always displayed as the title. If two fields are set, the second field is always displayed as the content.
 fields-to-return=Fields to Return
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Include a
 include-always=Include Always
 include-artifact-in-repository=Include Artifact in Repository
 include-asset-summary=Include Asset Summary
+include-asset-summary-help=Enable to return the result summary with the response.
 include-asset-url=Include Asset URL
+include-asset-url-help=Enable to return the link to the result with the response.
 include-bundle-symbolic-name=Include Bundle Symbolic Name
 include-bundle-symbolic-name-description=When selected, bundle symbolic name will be included into scope prefix.
 include-clear-filters-option=Include Clear Filters Option
@@ -14991,6 +14996,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Sites That I Administer
 sites-to-sync-x=Sites to Sync - {0}
 size=Size
+size-suggestion-help=Set the maximum number of results to display in suggestions.
 skip-to-content=Skip to Content
 skip-to-search=Skip to Search
 sku=SKU
@@ -15506,6 +15512,7 @@ successfully-unassigned-display-page-template=Successfully unassigned display pa
 such-as-x-or-x=Such as {0} or {1}
 suffix=Suffix
 suggestion-contributor=Suggestion Contributor
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions.
 suggestion-in-progress-email=Suggestion in Progress Email
 suggestion-received-email=Suggestion Received Email
 suggestion-resolved-email=Suggestion Resolved Email
@@ -15514,8 +15521,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully.
 suggestion-was-saved-successfully=Suggestion was saved successfully.
 suggestions=Suggestions
 suggestions-configuration=Suggestions Configuration
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms.
 suggestions-contributor-configuration=Suggestions Contributor Configuration
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor.
 suggestions-were-deleted-successfully=Suggestions were deleted successfully.
 suite=Suite
 sum=Sum
