--- a/modules/dxp/apps/commerce/headless/headless-commerce-machine-learning-impl/build.gradle
+++ b/modules/dxp/apps/commerce/headless/headless-commerce-machine-learning-impl/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly project(":apps:analytics:analytics-batch-export-import-api")
 	compileOnly project(":apps:analytics:analytics-settings-api")
+	compileOnly project(":apps:analytics:analytics-settings-rest-api")
 	compileOnly project(":apps:batch-engine:batch-engine-api")
 	compileOnly project(":apps:commerce:commerce-account-api")
 	compileOnly project(":apps:commerce:commerce-api")
